# httk-module-template

./: .gitignore  Makefile  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yaml  release.yml
docs/: conf.py  index.md
docs/notebooks/: examples.ipynb
docs/reference/: index.md
docs/reference/autoapi/httk/placeholder/: index.rst
docs/reference/autoapi/httk/placeholder/api/: index.rst
examples/: example.py
src/httk/placeholder/: __init__.py  api.py
tests/: test_api.py
